--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -28,7 +28,7 @@
 			</div>
 		</header>
 
-		<main class="gallery"></main>
+		<main class="gallery" id="gallery"></main>
 	</div>
 
 	<div class="modal" id="modal-container">
